--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "angular": "~1.5.0",
     "angular-ui-router": "~0.2.18",
     "bootstrap": "~3.3.6",
-    "mobile-angular-ui": "~1.2.0-rc.3"
+    "mobile-angular-ui": "~1.2.0-rc.3",
+    "moment": "^2.11.2"
   }
 }
